# torchydra

./: .env.yaml  .gitignore  README.md  data.dvc  enviromnent.yml  multirun.dvc  pyproject.toml  requirements.txt
.dvc/: config
configs/: config.yaml  inference.yaml  test_AHIR.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: surrogate.yaml
configs/experiment/: conv1dV2.yaml  conv1d_NoPCA.yaml  conv1d_ref.yaml  example.yaml  tuto_conv_nopca.yaml  tuto_conv_pca.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: dvclive.yaml  many_loggers.yaml  tensorboard.yaml
configs/model/: surrogate_module.yaml
configs/model_net/: conv1d_surr.yaml  conv1d_surrV2.yaml  conv1d_surr_nopca.yaml
configs/paths/: default.yaml
configs/preprocessing/: default.yaml
configs/trainer/: default.yaml
model/2023-03-30_08-45-11/: preprocessing.pkl
notebooks/: 1_AHIR_dataset_rem_neg_psd_val.ipynb  1_RRI_tutorial.ipynb
outputs/: .gitignore  train_surrogate.dvc
scripts/: experiment_run.bat  hp_search.bat  inference.bat  tensorboard.bat
src/: Preprocessing.py  config_schema.py  model_inference.py  surrogate_inference.py  train.py  train_AHIR.py  train_surrogate.py
src/configs/: config.yaml
src/data/: surrogate.py
src/data_preprocessing/: Prepare_NCfiles_for_ANN.py  Preprocessor_Zefyros_dataset_ANN.py
src/model/: conv1D_surr.py  surrogate_module.py
src/models/: conv1D_surr.py  conv1D_surr_pytorch.py  surrogate.py
src/preprocessing/: Prepare_NCfiles_for_ANN.py  Prepare_measure_test_data.py  envir_scaler.py  (+7 more)
(+38 files in other folders)
