[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchydra_rribault-fem"
version = "0.0.1"
authors = [
  { name="Example Author", email="romain.ribault@france-energies-martines.org" },
]
description = "a package to track deep learning experiments and models for Dionysos project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rribault-fem/torchydra"
"Bug Tracker" = "https://github.com/rribault-fem/torchydra/issues"